# numpyeigen-RSPD

./: CMakeLists.txt
RSPD/: angleutils.h  circle.cpp  circle.h  connectivitygraph.h  functor.h  geometryutils.h  pcacalculator.h  planarpatch.h  planedetector.cpp  planedetector.h  point.h  pointcloud.h  pointcloudio.hpp  primitive.cpp  primitive.h  primitivedetector.h  statisticsutils.h
example/: __init__.py
src/: example.cpp
tests/: test_example.py
